--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </form>
 <script>
 let timeout;
+var to = confirm(" Are You BTS Fan");
+console.log(to);
 
 function myFunction() {
   alert("Tomar Nanire Khalighor!");
