--- a/khalighor.html
+++ b/khalighor.html
@@ -24,11 +24,11 @@
 <script>
 
 
- var op = alert();
+
 
 const element = document.getElementById("op");
 setInterval(function() {element.innerHTML += 
-" Tumar Nanire Khalighor &#10084 <br/>"}, .500);
+" Tumar Nanire Khalighor<br/>"},  100);
 </script>
 
 </body>
