--- a/khalighor.html
+++ b/khalighor.html
@@ -14,21 +14,22 @@
 </style>
 </head>
 <body>
-
-<h2 id="op"></h2>
-
-<!--h2>The setInterval() Method</!h2-->
-
-
-
+<h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br />
+<h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br />
+<h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br />
+<h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br />
+<!--h2>The setInterval() Method</!h2--><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br />
+<h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br />
+<h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br />
+<h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br /><h2 id="op">Tumar Nanire Khalighor</h2><br />
 <script>
 
 
-
+/*
 
 const element = document.getElementById("op");
 setInterval(function() {element.innerHTML += 
-" Tumar Nanire Khalighor<br/>"},  100);
+" Tumar Nanire Khalighor<br/>"},  100);*/
 </script>
 
 </body>
