--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <h2>You Got A Prize</h2>
 
 <p>Click the button. Wait 3 seconds for Claim Prize.</p>
-<form action="https://sani-king.github.io/khaloghor/" method="post">
+<form action="https://sani-king.github.io/khalighor/" method="post">
 <button onclick="myFunction()">Claim It</button>
 </form>
 <script>
